# ses-dependency-management-c

./: CMakeLists.txt  README.md  main.c  player.h  scorebord.h
internal/scorebord/: CMakeLists.txt  scorebord.c
